# slowmoVideo

./: .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  CMakeLists.txt  Makefile  README.md  README.osx  README.osx.md  build-tarball.sh  fixup_osx_lib.sh  fixup_qt_osx.sh  git-archive.sh  pack-release.sh  readme-windows.txt  slowmoVideo.spec  todo.org  travis.yml  version.sh
V3D/: CMakeLists.txt
V3D/Apps/: CMakeLists.txt
V3D/Base/: v3d_exception.h  v3d_feature.h  v3d_image.cpp  v3d_image.h  v3d_imageprocessing.h  v3d_serialization.h  v3d_timer.h  v3d_utilities.cpp  v3d_utilities.h
V3D/Config/: FindCg.cmake  config.h  v3d_macros.cmake
V3D/GL/: glsl_shaders.h  v3d_gpubase.cpp  v3d_gpubase.h  v3d_gpucolorflow.cpp  v3d_gpucolorflow.h  v3d_gpuflow.cpp  v3d_gpuflow.h  v3d_gpuklt.cpp  v3d_gpupyramid.cpp  v3d_gpupyramid.h  v3d_gpuundistort.cpp  v3d_gpuundistort.h
slowmoVideo/: CMakeLists.txt  Doxyfile  Makefile  SVproject.cpp  SVproject.h  fetch.sh  interpolateSV.cpp  interpolateSV.h  main.cpp  test.cpp  test.h
slowmoVideo/cmake/: FindFFMPEG.cmake  macros.cmake
slowmoVideo/lib/: CMakeLists.txt  avconvInfo_sV.cpp  avconvInfo_sV.h  bezierTools_sV.cpp  bezierTools_sV.h  defs_sV.cpp  defs_sV.h  defs_sV.hpp  ffmpegEncode_sV.c  ffmpegEncode_sV.h  flowField_sV.cpp  flowField_sV.h  flowRW_sV.cpp  flowRW_sV.h  flowTools_sV.cpp  flowTools_sV.h  flowVisualization_sV.cpp  flowVisualization_sV.h  intMatrix_sV.cpp  intMatrix_sV.h  interpolate_sV.cpp  interpolate_sV.h  kernel_sV.cpp  kernel_sV.h  macros_sV.h  opticalFlowBuilderGPUKLT_sV.cpp  opticalFlowBuilderGPUKLT_sV.h  opticalFlowBuilder_sV.h  project_sV.cpp  project_sV.h  shutter_sV.cpp  shutter_sV.h  sourceField_sV.cpp  sourceField_sV.h  vector_sV.h  videoInfo_sV.c  videoInfo_sV.h
slowmoVideo/libgui/: CMakeLists.txt  combinedShortcuts.h  imageDisplay.cpp  imageDisplay.h
slowmoVideo/project/: CMakeLists.txt  abstractFlowSource_sV.h  abstractFrameSource_sV.cpp  abstractFrameSource_sV.h  abstractProjectRW_sV.h  abstractRenderTarget_sV.cpp  abstractRenderTarget_sV.h  emptyFrameSource_sV.cpp  emptyFrameSource_sV.h  flowSourceOpenCV_sV.cpp  flowSourceV3D_sV.cpp  flowSourceV3D_sV.h  flow_sV.cpp  flow_sV.h  imagesFrameSource_sV.cpp  imagesFrameSource_sV.h  imagesRenderTarget_sV.cpp  imagesRenderTarget_sV.h  interpolator_sV.cpp  interpolator_sV.h  motionBlur_sV.cpp  motionBlur_sV.h  nodeHandle_sV.cpp  nodeHandle_sV.h  nodeList_sV.cpp  nodeList_sV.h  node_sV.cpp  node_sV.h  nodelist_sV.cpp  nodelist_sV.h  projectPreferences_sV.cpp  projectPreferences_sV.h  project_sV.cpp  project_sV.h  renderPreferences_sV.h  renderTask_sV.cpp  renderTask_sV.h  segmentList_sV.cpp  segmentList_sV.h  segment_sV.cpp  (+15 more)
slowmoVideo/slowmoCLI/: CMakeLists.txt  main.cpp  videoInfo.cpp
slowmoVideo/slowmoFlowEdit/: CMakeLists.txt  flowEditCanvas.cpp  flowEditCanvas.h  flowEditCanvas.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  shortcutListDialog.ui
slowmoVideo/slowmoInfo/: CMakeLists.txt  slowmoInfo.cpp
slowmoVideo/slowmoRenderer/: CMakeLists.txt  rendererMain.cpp  slowmoRenderer_sV.cpp  slowmoRenderer_sV.h
slowmoVideo/slowmoUI/: CMakeLists.txt  aboutDialog.cpp  aboutDialog.h  aboutDialog.ui  canvas.cpp  canvas.h  canvas.ui  canvasTools.cpp  canvasTools.h  frameMonitor.cpp  frameMonitor.ui  imageDisplay.cpp  imageDisplay.h  inputMonitor.cpp  inputMonitor.h  inputMonitor.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  newprojectdialog.cpp  newprojectdialog.h  newprojectdialog.ui  node.cpp  node.h  nodelist.cpp  nodelist.h  preferencesDialog.cpp  preferencesDialog.h  preferencesDialog.ui  progressDialog.cpp  progressDialog.h  progressDialog.ui  progressDialogBuildFlow.cpp  progressDialogBuildFlow.h  progressDialogBuildFlow.ui  progressDialogExtractFrames.cpp  progressDialogExtractFrames.h  progressDialogExtractFrames.ui  renderDialog.cpp  (+12 more)
slowmoVideo/test/: CMakeLists.txt  Makefile  encodeTest.c  ffmpegTest.c  ffmpegTestEncode.c  ffmpegTestEncode.h  ffmpegTestEncodeFrames.cpp  test.cpp
slowmoVideo/tr/: slowmoVideo_it.qm
slowmoVideo/unittests/: CMakeLists.txt  testAll.cpp  testDefs_sV.h  testFlowField_sV.cpp  testFlowField_sV.h  testFlowRW_sV.cpp  testFlowRW_sV.h  testIntMatrix_sV.cpp  testIntMatrix_sV.h  testNodeList_sV.cpp  testProject_sV.cpp  testProject_sV.h  testShutterFunction_sV.cpp  testShutterFunction_sV.h  testVector_sV.cpp  testXmlProjectRW_sV.cpp  testXmlProjectRW_sV.h
slowmoVideo/visualizeFlow/: CMakeLists.txt  flowErrors_sV.cpp  flowErrors_sV.h  visualizeFlow.cpp
src/: CMakeLists.txt  config.h.in  version.h.in
src/V3D/: README.TXT
src/cmake/: FindFFMPEG.cmake  FindGLEW.cmake  FindQTKit.cmake  MingwCrossEnv.cmake
src/lib/: CMakeLists.txt  defs_sV.cpp  defs_sV.hpp  ffmpeg_writer.cpp  intMatrix_sV.cpp  interpolate_sV.cpp  interpolate_sV.h  macros_sV.h  shutter_sV.cpp  shutter_sV.h  video_enc.h
src/libgui/: CMakeLists.txt  imageDisplay.cpp  imageDisplay.h
src/project/: CMakeLists.txt  abstractFlowSource_sV.cpp  abstractFlowSource_sV.h  abstractFrameSource_sV.cpp  abstractFrameSource_sV.h  abstractProgressDialog.h  abstractRenderTarget_sV.h  canvasObject_sV.h  emptyFrameSource_sV.h  exportVideoRenderTarget.cpp  exportVideoRenderTarget.h  flowSourceOpenCV_sV.cpp  flowSourceOpenCV_sV.h  flowSourceV3D_sV.cpp  flowSourceV3D_sV.h  imagesFrameSource_sV.cpp  imagesFrameSource_sV.h  imagesRenderTarget_sV.cpp  imagesRenderTarget_sV.h  interpolator_sV.cpp  interpolator_sV.h  motionBlur_sV.cpp  motionBlur_sV.h  new_videoRenderTarget.cpp  new_videoRenderTarget.h  nodeList_sV.cpp  nodeList_sV.h  projectPreferences_sV.cpp  project_sV.cpp  project_sV.h  renderTask_sV.cpp  renderTask_sV.h  tag_sV.cpp  videoFrameSource_sV.cpp  videoFrameSource_sV.h  videoRenderTarget_sV.cpp  videoRenderTarget_sV.h  work_flow.cpp  xmlProjectRW_sV.cpp  xmlProjectRW_sV.h
src/slowmoCLI/: main.cpp  videoInfo.cpp
src/slowmoFlowEdit/: CMakeLists.txt  flowEditCanvas.cpp  flowEditCanvas.ui  main.cpp  mainwindow.cpp  mainwindow.h  shortcutListDialog.ui
src/slowmoRenderer/: CMakeLists.txt  slowmoRenderer_sV.cpp  slowmoRenderer_sV.h
src/slowmoUI/: canvas.cpp  (+13 more)
(+319 files in other folders)
